@@ -36,7 +36,7 @@
 #ifndef __LPUTIL
 #define __LPUTIL
 
-#include <liblpcommon.h>
+#include <common.h>
 
 #include <regex.h>
 
